--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="bg">
         <div class="container">
             <div class="logo">
-                <img src="/Images/Mask Group 4.png" alt="">
+                <img src="images/Mask Group 4.png" alt="">
             </div>
             <form class="login-form">
                 <div class="input-group">
